# loop-agent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: README.md  pyproject.toml  sandbox-requirements.in  sandbox.Dockerfile
apps/api/alembic/versions/: 0001_initial.py  0002_egress_hosts.py  0003_authority_receipt_contracts.py  0004_task_ownership.py  0005_trigger_authority.py  0006_authority_audit.py  0007_verified_changesets.py  0008_verified_completion_contract.py  0009_contract_draft.py  0010_operation_journal.py  0011_loop_state_machine.py  0012_product_sessions.py
apps/api/app/: main.py
apps/api/app/api/: errors.py
apps/api/app/cache/: redis.py
apps/api/app/cli/: __init__.py  main.py  receipt.py
apps/api/app/core/: config.py  lifespan.py  logging.py  redaction.py  security.py
apps/api/app/db/: session.py
apps/api/app/domain/: authority_revocation.py  authority_token.py  capability.py  iteration.py  loop.py  step.py  task.py
apps/api/app/egress_proxy/: __init__.py  __main__.py  admin.py  audit.py  config.py  proxy.py
apps/api/app/observability/: metrics.py
apps/api/app/provider_gateway/: __init__.py  config.py  main.py  providers.py  runtime.py
apps/api/app/repositories/: iteration.py  product_session.py  step.py  task.py  trigger.py
apps/api/app/schemas/: chat.py  contract.py  file.py  iteration.py  step.py  task.py  trigger.py
apps/api/app/services/: agent_loop.py  agent_react.py  changeset.py  chat.py  completion.py  contract.py  evaluation.py  ledger.py  memory.py  product_session.py  progress.py  prompts.py  receipt.py  repository_evaluation.py  runner.py  scheduler.py  skills.py  slack.py  task.py  telegram.py  trigger.py  verification.py
apps/api/app/tools/: __init__.py  base.py  calendar.py  egress.py  email.py  envelope.py  guards.py  kubernetes_sandbox.py  policy.py  provider_gateway.py  registry.py  sandbox.py  shell.py  vision.py  workspace.py
apps/api/scripts/: enforcement_acceptance.py  evaluate_one_instruction_project.py  evaluate_repository_matrix.py  evaluate_verified_completion.py  skill_tool.py  verify_receipt.py  worker_recovery_acceptance.py
apps/api/skills/: trust_key.pem
apps/api/tests/: conftest.py  test_agent_loop.py  test_agent_react.py  test_auth.py  test_auth_ownership.py  test_authority_revocation.py  test_authority_token.py  test_cache.py  test_calendar.py  test_changeset.py  test_chat.py  test_completion.py  test_config_security.py  test_contract.py  test_deployment_boundaries.py  test_egress_proxy.py  test_email.py  test_enforcement_acceptance.py  test_evaluation.py  test_health.py  test_ledger.py  test_llm.py  test_loop_components.py  test_mcp.py  test_memory.py  test_provider_gateway.py  test_quarantine.py  test_receipt.py  test_redaction.py  test_repository_evaluation.py  test_runner.py  test_sandbox.py  test_scheduler.py  test_skills.py  test_slack.py  test_stream.py  test_task_tree.py  test_tasks.py  test_telegram.py  test_tools.py  (+4 more)
docs/: README.md  (+4 more)
(+208 files in other folders)
