[project]
name = "loop-api"
version = "0.1.0"
description = "Loop — autonomous agent runtime with re-execution receipts and least-authority sandboxing (FastAPI backend)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.136,<1.0",
    "uvicorn[standard]>=0.49",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.31",
    "alembic>=1.18.5",
    "redis>=5.2",
    "httpx>=0.28",
    "python-multipart>=0.0.18",
    "cryptography>=42",
    "mcp>=1.28",
    "structlog>=24.4",
    "pyjwt>=2.10",
    "prometheus-client>=0.21",
    "kubernetes-asyncio>=36.1,<37",
    # --- Observability (OpenTelemetry) ---
    "opentelemetry-sdk>=1.43",
    "opentelemetry-exporter-otlp>=1.43",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.64b0",
    "opentelemetry-instrumentation-redis>=0.64b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "aiosqlite>=0.20",
    # Pinned: a floating ruff means CI (fresh install → newest) enables lint rules a
    # stale local ruff hasn't, so `ruff check` is green locally but red in CI. Bump
    # deliberately after fixing any new findings locally.
    "ruff==0.15.20",
    "mypy==2.1.0",
    "pip-audit==2.10.1",
    "uv==0.11.15",
    "fakeredis==2.36.2",
]
# Preinstalled in the runtime image so the agent can edit real documents:
# spreadsheets (openpyxl), Word docs (python-docx), and tabular data (pandas).
office = [
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "pandas>=2.2",
]
# Calendar access over CalDAV (iCloud / Fastmail / Nextcloud / etc.).
calendar = [
    "caldav>=1.3",
    "icalendar>=5.0",  # imported directly (Calendar/Event); don't rely on caldav's transitive pin
]

[project.scripts]
worker = "app.workers.worker:main"
loop = "app.cli.main:main"
loop-receipt = "app.cli.receipt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ----------------------------------------------------------------------------
# Tooling config (single source of truth)
# ----------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF", "ASYNC"]
ignore = [
    "B008",  # FastAPI uses function calls in argument defaults (Depends/Query)
    "UP046", # keep Generic[T] form for broad runtime compatibility (vs PEP 695)
    "UP047",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app"]
branch = true
